corriger non append dans l fichier db et placement des dossiers utilisateurs